# mcferkinchat

./: Gemfile  Guardfile  LICENSE.md  README.md  mcferkincaht.cabal
spec/: Helper.hs  ServerSpec.hs  SimpleSpec.hs  Spec.hs
src/: Main.hs  Server.hs
