name: McFerkinChat
version: 0.1.0
synopsis: A simple irc chat server for collaborating teams
homepage: http://github.com/mcferkin/mcferkinchat
category: Chat
author: Amos King, Oliver Ferrigni, Dave McCown
license: MIT
license-file: LICENSE.md
cabal-version: >= 1.10
build-type: Simple

executable program1
  build-depends:       base                == 4.5.*
  main-is: Server.hs
  ghc-options:
    -Wall -Werror
  hs-source-dirs: src

test-suite specs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src
                    , spec
  main-is:             Spec.hs
  ghc-options:
    -Wall -Werror
  build-depends:       base                == 4.5.*
                     , text                == 0.11.*
                     , mtl                 == 2.1.*
                     , hspec               >= 1.3
                     , hspec-expectations  >= 0.3
